fix z-index

--- a/TheGioiDoChoi/src/app/header/header.component.scss
+++ b/TheGioiDoChoi/src/app/header/header.component.scss
@@ -8,7 +8,7 @@
       transition: 0.2s linear;
       top: 0px;
       background: white;
-      z-index: 999;
+      z-index: 9999;
       }
     .nofixed {
       position: static;
